--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div>
+<!--<div>
   <input
     type="number"
     [(ngModel)]="factorialInput"
@@ -7,4 +7,33 @@
 </div>
 <div>
   The response is {{ factorialResult }}
+</div>-->
+<div class="collapse navbar-collapse" id="navbarResponsive">
+  <ul class="navbar-nav ml-auto">
+     <li class="nav-item active">
+        <a class="nav-link" href="#">Home
+           <span class="sr-only" routerLink="/">(current)</span>
+        </a>
+     </li>
+     <li class="nav-item">
+        <a class="nav-link" routerLink="/expenses">Report</a>
+     </li>
+     <li class="nav-item">
+        <a class="nav-link" href="#">Add Expense</a>
+     </li>
+     <li class="nav-item">
+
+        <a class="nav-link" href="#">About</a>
+     </li>
+     <li class="nav-item">
+          <div *ngIf="isUserLoggedIn; else isLogOut">
+            <a class="nav-link" routerLink="/logout">Logout</a>
+          </div>
+          <ng-template #isLogOut>
+            <a class="nav-link" routerLink="/login">Login</a>
+          </ng-template>
+     </li>
+  </ul>
 </div>
+
+<router-outlet></router-outlet>
